[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/CozyDesert.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Environments/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://environments/ObstacleSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]
[ext_resource path="res://UI/MenuLayer.tscn" type="PackedScene" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="MenuLayer" parent="." instance=ExtResource( 7 )]

[node name="Hud" parent="." instance=ExtResource( 5 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( -466, 1 )
scale = Vector2( 1, 1.10952 )
texture = ExtResource( 1 )
centered = false

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 800, 0 )

[node name="Ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 612 )
scale = Vector2( 1, 1.2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, 445 )

[connection signal="gameStarted" from="MenuLayer" to="." method="_on_MenuLayer_gameStarted"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]

[editable path="Ground"]
